--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body class="bg-lightModeBg font-nunito min-h-full dark:bg-bg-dark dark:text-text-dark">
+  <body class="bg-lightModeBg font-nunito min-h-ful text-text-light dark:bg-bg-dark dark:text-text-dark">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
